arranged image name>

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <div class="team-solo">
                 <div class="team-card team-card-featured">
-                    <img src="Harold.png" alt="Harold Lachlan" class="team-photo">
+                    <img src="Images/harold.png" alt="Harold Lachlan" class="team-photo">
                     <h4>Harold Lachlan</h4>
                     <p class="team-role">Chief Shitposter & Founder</p>
                     <p class="team-bio">"If your content doesn't make at least one person uncomfortable, you're doing it wrong."</p>
