fixed name Aussie

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AussieMedia | AussiCapital</title>
+    <title>Aussie Media | AussieCapital</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <nav>
             <a href="#" class="logo">
                 <span class="logo-icon">🦘</span>
-                <span class="logo-text">AussiCapital</span>
+                <span class="logo-text">AussieCapital</span>
             </a>
             <div class="nav-links">
                 <a href="#why">Why Us</a>
@@ -31,7 +31,7 @@
         <section class="hero">
             <div class="hero-content">
                 <div class="hero-badge">🍺 No BS Content Agency</div>
-                <h1>AussieMedia</h1>
+                <h1>Aussie Media</h1>
                 <p class="hero-tagline">Build Your Authority<br>Without Being a <span class="strikethrough">Wanker</span> Bore</p>
                 <p class="hero-description">A content agency for founders, investors, and brands who are sick of LinkedIn's cringe factory but still want to make a bloody fortune.</p>
                 <a href="#contact" class="btn btn-primary">
@@ -53,7 +53,7 @@
         <section id="why" class="why-section">
             <div class="section-header">
                 <span class="section-badge">🔥 Fair Dinkum</span>
-                <h2>Why Become an Aussi</h2>
+                <h2>Why Become an Aussie</h2>
             </div>
             
             <div class="hate-grid">
@@ -235,7 +235,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <span class="logo-icon">🦘</span>
-                <span class="logo-text">AussiCapital</span>
+                <span class="logo-text">AussieCapital</span>
             </div>
             <p class="footer-tagline">The only content agency that won't put you to sleep</p>
             <div class="footer-links">
@@ -243,7 +243,7 @@
                 <span>•</span>
                 <a href="#">Terms (Don't be a dickhead)</a>
             </div>
-            <p class="footer-copy">© 2026 AussiCapital. Built with spite and VB.</p>
+            <p class="footer-copy">© 2026 AussieCapital. Built with spite and VB.</p>
         </div>
     </footer>
 
